--- a/pokedex/config/packages/security.yaml
+++ b/pokedex/config/packages/security.yaml
@@ -19,7 +19,7 @@ security:
             provider: app_user_provider
             guard:
                 authenticators:
-                    - App\Security\LoginFormAuthenticator
+                    - App\Security\LoginUserAuthenticator
             logout:
                 path: app_logout
                 # where to redirect after logout
